welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:11: error: type mismatch;
 found   : (Int, Int)
 required: Int
		case it if 10 to 20 contains it => return it;
                                                          ^